# brain-tumor-detection-system

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  train_gui.py  train_worker.py  tumor_detection_app.py
ablation_experiment/: README.md  ablation_evaluation.py  ablation_results.csv  ablation_results.json
datasets/: README.md
datasets/classification/: icon.yaml
datasets/segmentation/: data.yaml
docs/: DATASETS.md  INSTALL.md  MODELS.md
models/: README.md
utils/: dataset.py  visualizer.py
weights/: README.md
