[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brain-tumor-detection-system"
version = "1.0.0"
description = "YOLO11-based brain tumor detection and segmentation GUI"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "AGPL-3.0-or-later" }
keywords = [
    "brain-tumor",
    "yolo11",
    "object-detection",
    "instance-segmentation",
    "medical-ai",
]
authors = [
    { name = "Brain Tumor Detection System Contributors" },
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "ultralytics>=8.3.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "PyQt5>=5.15.0",
    "nibabel>=5.0.0",
    "pyvista>=0.40.0",
    "pyvistaqt>=0.11.0",
    "psutil>=5.9.0",
    "requests>=2.28.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]
export = [
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
    "openvino>=2023.0.0",
]
tracking = [
    "tensorboard>=2.13.0",
    "wandb>=0.15.0",
]

[project.scripts]
brain-tumor-app = "tumor_detection_app:main"
brain-tumor-train = "train_gui:main"

[project.urls]
Homepage = "https://github.com/"
Documentation = "https://docs.ultralytics.com"

[tool.setuptools]
py-modules = ["tumor_detection_app", "train_gui", "train_worker"]

[tool.setuptools.packages.find]
include = ["utils*"]
exclude = ["ultralytics*", "datasets*", "weights*", "models*", "runs*", "results*"]
